# GTPS-Framework

./: .gitmodules  CMakeLists.txt  README.md  make_header.bat  make_header.sh
src/: CMakeLists.txt  macros.h
src/config/: config.h  macros.h
src/events/: context.h  manager.cc  manager.h
src/logger/: logger.cc  logger.h
src/math/: math.h
src/player/: player.cc  player.h
src/runner/: run.cc  run.h
src/sdk/: packet.h  update.h  variant.cc  variant.h
src/server/: server.cc  server.h
